Create CustomUser and Order models, and setup postgres db

--- a/.env_example
+++ b/.env_example
@@ -1,2 +1,7 @@
 REDIS_HOST=redis_container
 REDIS_PORT=6379
+DATABASE_NAME=producer_consumer
+DATABASE_USER=postgres
+DATABASE_PASSWORD=postgres
+DATABASE_HOST=localhost
+DATABASE_PORT=5432
