Add docker-compose to project

--- a/.env_example
+++ b/.env_example
@@ -1,7 +1,8 @@
 REDIS_HOST=redis_container
 REDIS_PORT=6379
-DATABASE_NAME=producer_consumer
-DATABASE_USER=postgres
-DATABASE_PASSWORD=postgres
-DATABASE_HOST=localhost
-DATABASE_PORT=5432
+REDIS_PASSWORD=eYVX7EwVmmxKPCDmwMtyKVge8oLd2t81
+POSTGRES_DB=service
+POSTGRES_USER=admin
+POSTGRES_PASSWORD=some_password
+POSTGRES_HOST=postgres_service
+POSTGRES_DB_PORT=5432
